# pytest-unused-port

./: README.md  pyproject.toml
pytest_unused_port/: __init__.py  __main__.py
tests/: test_pytest_unused_port.py
