[project]
name = "pytest-unused-port"
version = "0.2"
description = "pytest fixture finding an unused local port"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = [
  "Framework :: Pytest"
]
dependencies = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/pytest-unused-port"
Changelog = "https://github.com/simonw/pytest-unused-port/releases"
Issues = "https://github.com/simonw/pytest-unused-port/issues"
CI = "https://github.com/simonw/pytest-unused-port/actions"

[project.entry-points.pytest11]
unused_port = "pytest_unused_port"

[project.scripts]
pytest-unused-port = "pytest_unused_port.__main__:main"
uport = "pytest_unused_port.__main__:main"
